src/tests/snapshots/swayward__tests__window_opening__check_target_output_and_workspace@ws2-out2-fsT-wfsB1.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: B1\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-2\"\n    open-on-output \"headless-2\"\n    open-fullscreen true\n}"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]

post-map configures:


unfullscreen configure:
size: 1868 × 1028, bounds: 1868 × 1028, states: []
